[package]
name = "nf"
version = "0.3.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tagsearch = "0.37.0"
clap = { version = "3.1.6", features = ["derive", "cargo"] }
rayon = "1.7.0"
regex = "1.9.1"
